Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30891

Assertion `!table->versioned(VERS_TRX_ID)' failed in Write_rows_log_event::binlog_row_logging_function

    XMLWordPrintable

Details

    Description

      bb-11.0-oalter f9b33ac570337be320f7

      --source include/have_innodb.inc 
      --source include/have_partition.inc 
       
      CREATE TABLE t1 (id int, row_start BIGINT UNSIGNED GENERATED ALWAYS AS ROW START, row_end BIGINT UNSIGNED GENERATED ALWAYS AS ROW END, PERIOD FOR SYSTEM_TIME ( row_start, row_end )) ENGINE=InnoDB WITH SYSTEM VERSIONING;
       
      create procedure sp() ALTER TABLE t1 PARTITION BY HASH(id) ;
      --connect (a1,127.0.0.1,root,,test)
       
      --connection a1 
      --send 
      call sp();
       
      --connection default
       
       let $1=100;
      while ($1)
      {
      INSERT INTO t1 (id) VALUES (1);
       dec $1;
      }
      
      

      Version: '11.0.1-MariaDB-debug-log' 
      mysqld: /11.0/sql/log_event.h:4889: static bool Write_rows_log_event::binlog_row_logging_function(THD*, TABLE*, Event_log*, binlog_cache_data*, bool, const uchar*, const uchar*): Assertion `!table->versioned(VERS_TRX_ID)' failed.
      230324 12:40:22 [ERROR] mysqld got signal 6 ;
       
       
      ??:0(gsignal)[0x7fb8054f100b]
      ??:0(abort)[0x7fb8054d0859]
      /lib/x86_64-linux-gnu/libc.so.6(+0x22729)[0x7fb8054d0729]
      ??:0(__assert_fail)[0x7fb8054e1fd6]
      sql/log_event.h:4890(Write_rows_log_event::binlog_row_logging_function(THD*, TABLE*, Event_log*, binlog_cache_data*, bool, unsigned char const*, unsigned char const*))[0x556ef09eee7c]
      sql/log.cc:2288(binlog_log_row_online_alter(TABLE*, unsigned char const*, unsigned char const*, bool (*)(THD*, TABLE*, Event_log*, binlog_cache_data*, bool, unsigned char const*, unsigned char const*)))[0x556ef0cf8150]
      sql/handler.cc:7274(handler::binlog_log_row(unsigned char const*, unsigned char const*, bool (*)(THD*, TABLE*, Event_log*, binlog_cache_data*, bool, unsigned char const*, unsigned char const*)))[0x556ef09db34a]
      sql/handler.cc:7822(handler::ha_write_row(unsigned char const*))[0x556ef09e1865]
      sql/ha_partition.cc:4580(ha_partition::write_row(unsigned char const*))[0x556ef112c66f]
      sql/handler.cc:7814(handler::ha_write_row(unsigned char const*))[0x556ef09e1711]
      sql/sql_insert.cc:2203(write_record(THD*, TABLE*, st_copy_info*, select_result*))[0x556eeffd9d73]
      sql/sql_insert.cc:1153(mysql_insert(THD*, TABLE_LIST*, List<Item>&, List<List<Item> >&, List<Item>&, List<Item>&, enum_duplicates, bool, select_result*))[0x556eeffd0f7d]
      sql/sql_parse.cc:4569(mysql_execute_command(THD*, bool))[0x556ef009e4b1]
      sql/sql_parse.cc:8000(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x556ef00b69d6]
      sql/sql_parse.cc:1896(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x556ef008cc2c]
      sql/sql_parse.cc:1407(do_command(THD*, bool))[0x556ef0089968]
      sql/sql_connect.cc:1416(do_handle_one_connection(CONNECT*, bool))[0x556ef0559c39]
      sql/sql_connect.cc:1320(handle_one_connection)[0x556ef0559596]
      perfschema/pfs.cc:2203(pfs_spawn_thread)[0x556ef11776fe]
      nptl/pthread_create.c:478(start_thread)[0x7fb8059fc609]
       
      Query (0x6290001f92a8): INSERT INTO t1 (id) VALUES (1)
      

      Attachments

        Issue Links

          Activity

            People

              nikitamalyavin Nikita Malyavin
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d
                  2d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.